# apple-health-mcp

./: .gitignore  CLAUDE.md  DUPLICATE_HANDLING.md  PERFORMANCE_OPTIMIZATIONS.md  benchmark_optimizations.py  check_db.py  check_integrity.py  check_record_types.py  continue_parsing.py  dvc  example_usage.py  integrity_report.py  main.py  parse_health_data.py  parse_health_data_multiprocessing.py  parse_health_data_optimized.py  parse_with_progress.py  performance_test.py  pyproject.toml  test_duplicate_handling.db-shm  test_duplicate_handling.db-wal  test_duplicate_handling.py  test_multiprocessing_1.db-shm  test_multiprocessing_1.db-wal  test_multiprocessing_2.db-shm  test_multiprocessing_2.db-wal  test_multiprocessing_4.db-shm  test_multiprocessing_4.db-wal  test_multiprocessing_parser.py  test_sample.db-shm  test_sample.db-wal  test_small_subset.py
.devcontainer/: Dockerfile  devcontainer.json  poststartcommand.sh
notebooks/: 001_exploration.ipynb
src/apple_health_mcp/: models.py  parser.py  parser_multiprocessing.py  parser_old.py  parser_optimized.py
tests/: __init__.py  test_parser_sample.py
tests/data/: export.xml
